--- a/app/src/main/res/layout/activity_create_goal.xml
+++ b/app/src/main/res/layout/activity_create_goal.xml
@@ -39,7 +39,7 @@
             android:textColor="@color/Dark_Green"/>
 
         <TextView
-            android:id="@+id/tvScreenSubject"
+            android:id="@+id/tvHelp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Goal"
