--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -11,64 +11,51 @@
         android:layout_marginTop="10dp"
         android:id="@+id/vwLogsBar"
         android:layout_width="4dp"
-        android:layout_height="90dp"
+        android:layout_height="60dp"
         android:background="@drawable/rounded_rectangle"
         android:backgroundTint="@color/Dark_Green"/>
 
     <LinearLayout
         android:id="@+id/llScreenHeading"
-        android:layout_marginTop="10dp"
+        android:layout_width="389dp"
+        android:layout_height="64dp"
         android:layout_marginLeft="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_toRightOf="@id/vwLogsBar">
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/vwLogsBar"
+        android:orientation="vertical">
+
 
         <TextView
-            android:id="@+id/tvScreenFunction"
+            android:id="@+id/tvHelp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create"
-            android:textSize="30dp"
-            android:layout_marginTop="2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/Dark_Green"/>
-
-        <TextView
-            android:id="@+id/tvScreenSubject"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Goal"
-            android:textStyle="bold"
+            android:layout_marginTop="0dp"
+            android:text="Help"
+            android:textColor="@color/Dark_Green"
             android:textSize="40dp"
-            android:layout_marginTop="-10dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textColor="@color/Dark_Green"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </LinearLayout>
 
     <ImageView
         android:id="@+id/imgBlackTurtle"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:srcCompat="@drawable/blackturtle"
+        android:layout_width="76dp"
+        android:layout_height="62dp"
         android:layout_marginLeft="320dp"
         android:layout_marginTop="10dp"
         android:rotation="-45"
-        />
+        app:srcCompat="@drawable/blackturtle" />
 
     <View
         android:layout_below="@id/llScreenHeading"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/vwBackingBoard"
         android:layout_width="match_parent"
-        android:layout_height="640dp"
+        android:layout_height="650dp"
         android:background="@drawable/backing_shape"
         android:backgroundTint="@color/Dark_Green"/>
 
