--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -66,19 +66,35 @@
         android:layout_height="64dp"
         app:srcCompat="@drawable/cyanturtle"
         android:layout_marginLeft="340dp"
-        android:layout_marginTop="436dp"
+        android:layout_marginTop="636dp"
         android:rotation="25"
         />
 
     <ImageView
         android:id="@+id/imgGreenTurtle"
-        android:layout_width="114dp"
-        android:layout_height="114dp"
-        app:srcCompat="@drawable/greenturtle"
+        android:layout_width="103dp"
+        android:layout_height="92dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="630dp"
         android:rotation="-30"
-        />
+        app:srcCompat="@drawable/greenturtle" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/llHelp"
+        android:layout_height="520dp"
+        android:layout_below="@id/llScreenHeading"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvHelpMessage"
+            android:layout_width="389dp"
+            android:layout_height="252dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/rounded_rectangle"
+            android:text="Help Message" />
+    </LinearLayout>
 
 
 </RelativeLayout>
